--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
   # Trigger the action manually or on a schedule
   workflow_dispatch:
   schedule:
-    - cron: '*/10 * * * * *' # Run every day at midnight
+    - cron: "*/1* * * * *" # Run every 1 minute
 
 jobs:
   build:
