--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,9 +16,9 @@ jobs:
           git clone https://github.com/Sree2011/PROGRAMMING_NOTES.wiki.git wiki
       - name: Convert Markdown to PDF
         run: |
-          pip install markdown2pdf
+          sudo apt-get install pandoc texlive-latex-base texlive-fonts-recommended texlive-extra-utils texlive-latex-extra
           for file in wiki/*.md; do
-            md2pdf "$file"
+            pandoc {$file}.md -o {$file}.pdf
           done
       - name: Combine PDFs
         run: |
