--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,7 +16,10 @@ jobs:
           git clone https://github.com/Sree2011/PROGRAMMING_NOTES.wiki.git wiki
       - name: Convert Markdown to PDF
         run: |
-          sudo apt-get install pandoc texlive-latex-base texlive-fonts-recommended texlive-extra-utils texlive-latex-extra
+        sudo apt-get install pandoc
+        sudo apt-get install pdftk
+        sudo apt-get install texlive-latex-base texlive-fonts-recommended texlive-extra-utils texlive-latex-extra
+
           for file in wiki/*.md; do
             pandoc {$file} -o {$file}.pdf
           done
