--- a/.github/workflows/html-to-pdf.yaml
+++ b/.github/workflows/html-to-pdf.yaml
@@ -16,7 +16,7 @@ jobs:
       run: sudo apt-get install wkhtmltopdf
 
     - name: Convert HTML to PDF
-      run: wkhtmltopdf ./cheatsheets/variables/variables.html ./cheatsheets/variables/variables.pdf
+      run: wkhtmltopdf variables.html variables.pdf
 
     - name: Commit PDF
       run: |
